--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,7 @@
     Submit link
   </button>
 </form>
+<div class="ui grid posts">
+  <app-articale *ngFor="let article of articles"
+    [article]="article"></app-articale>
+</div>
